# linux-keyutils

./: .gitignore  .gitmodules  Cargo.toml  README.md  tarpaulin.toml
.github/workflows/: checks.yml  coverage.yml
examples/: keyctl.rs  keystore.rs  request-key.rs
src/: errors.rs  info.rs  key.rs  keyctl.rs  keyring.rs  keystore.rs  lib.rs  links.rs  metadata.rs  permissions.rs  types.rs
src/ffi/: functions.rs  mod.rs  types.rs
