[package]
name = "linux-keyutils"
version = "0.2.4"
edition = "2021"
authors = ["landhb <landhb@users.noreply.github.com>"]
description = """
Rust interface to the Linux key-management facility. Provides a safe interface around the raw system
calls allowing user-space programs to perform key manipulation.
"""
homepage = "https://github.com/landhb/linux-keyutils"
repository = "https://github.com/landhb/linux-keyutils"
keywords = ["keyutils", "keyctl", "linux","keyring", "secure-storage"]
readme = "README.md"
license = "Apache-2.0 OR MIT"

[features]
default = []
std = ["bitflags/std"]

[[example]]
name = "keyctl"
required-features = ["std"]

[dependencies]
libc = {version = "0.2.132", default-features = false}
bitflags = {version = "2.4", default-features = false}

[dev-dependencies]
zeroize = "1.5.7"
clap = {version = "4.4.11", default-features = false, features = ["std", "derive"]}
